tests/NormalTests/paczka1/fuzzy1/12246608.err
Error in line 4: JHMn6 A277 95,4
Error in line 6: JHMn6 A682 43,4
Error in line 3: x95MqaNS A277 7,1
Error in line 10: JHMn6 A821 22,0
Error in line 29: iHJPhekyyzr A277 34,8
